--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,13 @@
+server:
+  address: localhost
+  port: 8088
 spring:
-  application:
-    name: dayone-financial
+  redis:
+    host: 127.0.0.1
+    port: 6379
 
-h2:
-  console:
-    enabled: true
-      path: /h2-console
+  application:
+    name: StockDividend
 
   jpa:
     hibernate:
@@ -16,6 +18,19 @@ h2:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:dayone;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:tcp://localhost/~/test
     username: sa
     password:
+
+  jwt:
+    secret: c3ByaW5nLWJvb3QtU3RvY2tEaXZpZGVuZA==
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+
+scheduler:
+  scrap:
+    yahoo: "0 0 0 * * *"
